Fix black H4s in dark mode (#912)

--- a/resources/css/content.css
+++ b/resources/css/content.css
@@ -298,7 +298,7 @@ ul.list-col {
 .dark {
     article, .markdown {
         @apply bg-transparent text-gray-dark;
-        h1, h2, h3 { @apply text-white }
+        h1, h2, h3, h4 { @apply text-white }
         table {
             @apply bg-transparent border-gray-darkest text-gray-dark;
             tbody tr { @apply even:bg-transparent; }
